deploy/namespaces/monitoring/ingress/01-monitoring-lan-only-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
  namespace: monitoring
spec:
  ipAllowList:
    sourceRange:
      - 192.168.2.0/24
      - 10.42.0.0/16
      - 10.43.0.0/16
      - 192.168.0.0/16
